added font and apple and androit store

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -40,3 +40,26 @@ img {
 .form-control::placeholder {
   color: rgb(161, 156, 156) !important;
 }
+
+#Header {
+  font-family: Satisfy;
+  color: rgb(47, 46, 46);
+}
+
+#Lading-p {
+  color: rgb(59, 58, 58);
+}
+
+#stores {
+  left: 40%;
+  position: relative;
+  margin: 30px 5px 10px 5px;
+}
+
+
+.apple, .androit {
+  width: 10%;
+  z-index: 1;
+  margin: 0 auto;
+  
+}
